--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Temperature</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="Css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
- </head>
-     <div id="weather">
- </div>
-     <p>temperature<span id="temp"></span>
-  </p>
-     <p>wind speed<span id="wind"></span>
-  </p>
-  <script type="text/javascript">
-  </script>
-</body>
+    <head>
+        <title>
+            HOMEPAGE
+        </title>
+        <meta charset="utf-8">
+            <meta content="width=device-width, initial-scale=1" name="viewport">
+                <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+                    </script>
+                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+                    </script>
+                </link>
+            </meta>
+        </meta>
+    </head>
+    <body>
+        <h1 align="center" class="color">
+            TRY IT
+        </h1>
+        <div class="container">
+            <div align="center" class="jumbotron" style="background-color: silver;">
+                <form onsubmit="event.preventDefault(); myFunction();">
+                    <div class="form-group">
+                        <input class="form-control" id="city" placeholder="Enter City" required="" type="text">
+                        </input>
+                    </div>
+                    <button class="btn btn-default" type="submit">
+                        Get Forecast
+                    </button>
+                </form>
+                <div id="weather">
+                </div>
+                <div id="temp">
+                </div>
+                <div id="wind">
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+          function myFunction() {
+            var location=document.getElementById("city").value;
+            var url = 'https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where text="' + location + '")&format=json';
+
+            console.log(url);
+
+            var request = new XMLHttpRequest();
+            request.onreadystatechange = function(){
+              if(request.readyState==4) {
+                var data = JSON.parse(request.responseText);
+                var x=data.query.results.channel.item.condition.temp +
+                    data.query.results.channel.units.temperature;
+                    
+                document.getElementById("temp").innerHTML =  x;
+              }
+            } 
+            request.open('GET', url, true);
+            request.send();
+            return false;
+          }
+        </script>
+    </body>
 </html>
