--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
             <meta content="width=device-width, initial-scale=1" name="viewport">
                 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+                <link rel="stylesheet" type="text/css" href="Css/style.css">
                     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
                     </script>
                     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
@@ -17,10 +18,10 @@
     </head>
     <body>
         <h1 align="center" class="color">
-            TRY IT
+            WEATHER FORECAST
         </h1>
         <div class="container">
-            <div align="center" class="jumbotron" style="background-color: silver;">
+            <div align="center" id="jumbo" class="jumbotron">
                 <form onsubmit="event.preventDefault(); myFunction();">
                     <div class="form-group">
                         <input class="form-control" id="city" placeholder="Enter City" required="" type="text">
@@ -30,35 +31,14 @@
                         Get Forecast
                     </button>
                 </form>
-                <div id="weather">
-                </div>
-                <div id="temp">
-                </div>
-                <div id="wind">
-                </div>
+                <br>
+                <h2  id="temp">
+                </h2>
+                <h3 id="wind">
+                </h3>
+                <h4 id="humidity"></h4>
             </div>
         </div>
-        <script type="text/javascript">
-          function myFunction() {
-            var location=document.getElementById("city").value;
-            var url = 'https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where text="' + location + '")&format=json';
-
-            console.log(url);
-
-            var request = new XMLHttpRequest();
-            request.onreadystatechange = function(){
-              if(request.readyState==4) {
-                var data = JSON.parse(request.responseText);
-                var x=data.query.results.channel.item.condition.temp +
-                    data.query.results.channel.units.temperature;
-                    
-                document.getElementById("temp").innerHTML =  x;
-              }
-            } 
-            request.open('GET', url, true);
-            request.send();
-            return false;
-          }
-        </script>
+        <script type="text/javascript" src="Javascript/script.js"></script>
     </body>
 </html>
