--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            HOMEPAGE
+            WEATHER-APP
         </title>
         <meta charset="utf-8">
             <meta content="width=device-width, initial-scale=1" name="viewport">
