--- a/home.html
+++ b/home.html
@@ -32,13 +32,35 @@
                     </button>
                 </form>
                 <br>
+                <button onclick="my();" class="btn btn-default">Next</button>
+                <br>
                 <h2  id="temp">
                 </h2>
                 <h3 id="wind">
                 </h3>
+
                 <h4 id="humidity"></h4>
+                <h3 style="display: none;" id="today">TODAY</h3>
+                <div class="row">
+                    <div class="col-lg-3 col-sm-3">
+                <h4  id="high"></h4></div>
+                <div class="col-lg-6 col-sm-6">
+                <h4  id="text"></h4></div>
+                <div class="col-lg-3 col-sm-3">
+                <h4  id="low"></h4></div></div>
+ <h3 style="display: none;" id="tom">TOMMOROW</h3>
+                <div class="row">
+                    <div class="col-lg-3 col-sm-3">
+                <h4  id="high1"></h4></div>
+                <div class="col-lg-6 col-sm-6">
+                <h4  id="text1"></h4></div>
+                <div class="col-lg-3 col-sm-3">
+                <h4  id="low1"></h4></div></div>
+
             </div>
+             
         </div>
+
         <script type="text/javascript" src="Javascript/script.js"></script>
     </body>
 </html>
