reset button update

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                     </button>
                 </form>
                 <br>
-                <button onclick="my();" class="btn btn-default">Next</button>
+                <button onclick="my();" class="btn btn-default">Reset</button>
                 <br>
                 <h2  id="temp">
                 </h2>
