--- a/home.html
+++ b/home.html
@@ -16,7 +16,8 @@
             </meta>
         </meta>
     </head>
-    <body>
+    <body class="bg-img">
+
         <h1 align="center" class="color">
             WEATHER FORECAST
         </h1>
